--- a/SAMS/Pages/Shared/_Layout.cshtml
+++ b/SAMS/Pages/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Students/GetStudents">Student</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Leasings/GetLeasings">Leasing</a>
+                        </li>
                     </ul>
                 </div>
             </div>
