--- a/SAMS/Pages/Shared/_Layout.cshtml
+++ b/SAMS/Pages/Shared/_Layout.cshtml
@@ -30,6 +30,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Leasings/GetLeasings">Leasing</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Rooms/GetRooms">Rooms</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Apartments/GetApartments">Apartments</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Dormitories/GetDormitories">Dormitories</a>
+                        </li>
                     </ul>
                 </div>
             </div>
