--- a/SAMS/Pages/Leasings/GetLeasings.cshtml
+++ b/SAMS/Pages/Leasings/GetLeasings.cshtml
@@ -6,11 +6,9 @@
 <table class="table">
     <thead>
         <tr>
-            <th>  Student NO   </th>
-            <th>    Name  </th>
-            <th>  Address  </th>
-            <th>    Has Room  </th>
-            <th>  Registration Date   </th>
+            <th>  Leasing NO   </th>
+            <th>    Date From  </th>
+            <th>  Date To  </th>
         </tr>
     </thead>
     <tbody>
