--- a/SAMS/Pages/Rooms/GetRooms.cshtml
+++ b/SAMS/Pages/Rooms/GetRooms.cshtml
@@ -6,11 +6,10 @@
 <table class="table">
     <thead>
         <tr>
-            <th>  Student NO   </th>
-            <th>    Name  </th>
-            <th>  Address  </th>
-            <th>    Has Room  </th>
-            <th>  Registration Date   </th>
+            <th>  Place NO   </th>
+            <th>    Room NO  </th>
+            <th>  Rent Per Semester  </th>
+            <th>    Occupied  </th>
         </tr>
     </thead>
     <tbody>
