--- a/SAMS/Pages/Shared/_Layout.cshtml
+++ b/SAMS/Pages/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Dormitories/GetDormitories">Dormitories</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Students/GetWaitingList">Waiting List</a>
+                        </li>
                     </ul>
                 </div>
             </div>
